Categoria-read foi implementado

--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -5,7 +5,7 @@
                 <i class="material-icons">home</i>
                 Início
             </a>
-            <a mat-list-item class="textoMenu">
+            <a routerLink="/categorias" mat-list-item class="textoMenu">
                 <i class="material-icons">menu_book</i>
                 Categorias
             </a>
