metodo create implementado para Categoria

--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,7 +3,7 @@
         <h1>Categoria</h1>
     </div>
 
-    <button class="mat-elevation-z8 content-table" mat-stroked-button color="primary" style="color: white;"><mat-icon class="icon-add">add</mat-icon>NOVA CATEGORIA</button>
+    <button class="mat-elevation-z8 content-table" (click)="navegarParaCategoriaCreate()" mat-stroked-button color="primary" style="color: white;"><mat-icon class="icon-add">add</mat-icon>NOVA CATEGORIA</button>
 
     <div class="mat-elevation-z8 content-table">
         <table class="table" mat-table [dataSource]="categorias">
@@ -53,7 +53,4 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
     </div>
-    
-      
-      
 </div>
