finalizando o metodo CREATE

--- a/src/app/components/views/categoria/categoria-create/categoria-create.component.html
+++ b/src/app/components/views/categoria/categoria-create/categoria-create.component.html
@@ -13,7 +13,7 @@
 
    <div class="buttons">
     <button (click)="create()" class="mat-elevation-z8 content-table" mat-stroked-button color="primary" style="color: white;"><mat-icon class="icon-add" style="margin-right: .3rem; margin-bottom: .2rem;">add_circle</mat-icon>CRIAR CATEGORIA</button>
-    <button class="mat-elevation-z8 content-table" mat-stroked-button color="warn"><mat-icon class="icon-add" style="margin-right: .3rem; margin-bottom: .2rem;">highlight_off</mat-icon>CANCELAR</button>
+    <button (click)="cancela()"class="mat-elevation-z8 content-table" mat-stroked-button color="warn"><mat-icon class="icon-add" style="margin-right: .3rem; margin-bottom: .2rem;">highlight_off</mat-icon>CANCELAR</button>
 
    </div> 
 </form>
