Categoria DELETE implementada

--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="container">
     <mat-sidenav mode="side" opened>
         <mat-nav-list>
-            <a routerLink="" mat-list-item class="textoMenu">
+            <a routerLink="/home" mat-list-item class="textoMenu">
                 <i class="material-icons">home</i>
                 Início
             </a>
