Upate para categoria implementado

--- a/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
+++ b/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
@@ -12,7 +12,7 @@
     </mat-form-field>
 
    <div class="buttons">
-    <button (click)="delete()"  class="mat-elevation-z8 content-table" mat-stroked-button color="primary" style="color: white;"><mat-icon class="icon-add" style="margin-right: .3rem; margin-bottom: .2rem;">delete</mat-icon>DELETAR CATEGORIA</button>
+    <button (click)="delete()"  class="mat-elevation-z8 content-table" mat-stroked-button color="primary" style="color: white;"><mat-icon class="icon-add" style="margin-right: .3rem; margin-bottom: .2rem;">delete_forever</mat-icon>DELETAR CATEGORIA</button>
     <button (click)="cancelar()" class="mat-elevation-z8 content-table" mat-stroked-button color="warn"><mat-icon class="icon-add" style="margin-right: .3rem; margin-bottom: .2rem;">highlight_off</mat-icon>CANCELAR</button>
 
    </div> 
