--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -3,7 +3,7 @@
         <h1>LIVROS</h1>
     </div>
 
-    <button class="mat-elevation-z8 content-table" mat-stroked-button color="primary" style="color: white;"><mat-icon class="icon-add">add</mat-icon>NOVO LIVRO</button>
+    <button class="mat-elevation-z8 content-table" mat-stroked-button color="primary" (click)="navegarParaCriarLivro()" style="color: white;"><mat-icon class="icon-add">add</mat-icon>NOVO LIVRO</button>
 
     <div class="mat-elevation-z8 content-table">
         <table class="table" mat-table [dataSource]="livros">
@@ -34,7 +34,7 @@
             <ng-container matColumnDef="acoes">
               <th class="mat-header" mat-header-cell *matHeaderCellDef> Ações </th>
               <td mat-cell *matCellDef="let row">
-                <a class="edit" href="#">
+                <a class="edit" routerLink="{{ row.id }}/update">
                     <i class="material-icons">edit</i>
                 </a>   
                 <a class="delete" href="#">
